#27 custom middleware to verify user is owner of LD

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -286,7 +286,9 @@
 <script src="/js/ld/HomeController.js"></script>
 <script src="/js/ld/HomeService.js"></script>
 <script src="/js/ld/LearningDesignController.js"></script>
+<script src="/js/ld/LearningDesignEditController.js"></script>
 <script src="/js/ld/LearningDesignService.js"></script>
+<script src="/js/ld/LearningDesignEditService.js"></script>
 <script src="/js/ld/LDDirectives.js"></script>
 <script src="/js/ld/ActivityFilter.js"></script>
 <script src="/js/user/UserController.js"></script>
