#28 custom onblur directive to detect field changed event, after user tabs or clicks away from it

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -144,6 +144,7 @@
                     <input class="editInputName" type="text"
                         name="ldName"
                         ng-model="learningDesign.ld_name" required
+                        ui-Blur="updateLdName()"
                         ng-maxlength="50"
                         ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
 
