--- a/client/css/app.css
+++ b/client/css/app.css
@@ -410,10 +410,21 @@ width: 98%;
 width: 70%;
     float: right;
 }
+.formInputMulti {
+width: 65%;
+}
+
 input.formInput {
     font-size: 14px;
     line-height: 14px;
     margin: 0;
+    padding: 0 1%;
+}
+
+input.formInputMulti {
+    font-size: 14px;
+    line-height: 14px;
+    margin: 0 2px 0 13px;
     padding: 0 1%;
 }
 
@@ -518,23 +529,24 @@ margin-left: 4%;
     margin: 5px 0;
 }
 
-button.sidebarButton  {
+
+.editButton  {
 background: #0099CC;
-    border-radius: 14px;
-    height: 16px;
-    width: 16px;
-    line-height: 16px;
+    border-radius: 12px;
+    height: 20px;
+    width: 20px;
+    line-height: 20px;
     margin: 0;
+    text-align: center;
     padding: 0;
-}
-button.sidebarButton i {
-    margin: 0;
-    padding: 0;
+    border: none;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+    display: inline-block;
 }
 
-.sidebarButton:hover {
+
+.editButton:hover {
     background-color: #990000;
-    color: #ffffff;
 }
 .sidebarTextarea {
     font: 12px 'Raleway', sans-serif;
