--- a/client/views/index.html
+++ b/client/views/index.html
@@ -160,12 +160,13 @@
                                     <span class="clearfix"></span>
                                 </div>
                                 <label class="formLabel"><i class="icon-map-marker"></i> Topics*:</label>
-                                <input class="formInput" type="text" ng-model="ldTopic" name="ldTopic"
+                                <input class="formInputMulti" type="text" ng-model="ldTopic" name="ldTopic"
                                        typeahead="suggestion for suggestion in getSubjects($viewValue)"
                                        typeahead-on-select="addTopicFromSuggestion()"
                                        ui-keypress="{13:'addTopicFromUserInput($event)'}"
                                        placeholder="Topics..." required ng-maxlength="255"
                                        ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
+                                <span class="editButton" ng-click="addTopicFromUserInput($event)"><i class="icon-plus icon-white"></i> </span>
                                 <span class="clearfix"></span>
 
                                 <div id="topicTags" class="formTag">
@@ -186,13 +187,14 @@
                                     <span class="clearfix"></span>
                                 </div>
                             <label class="formLabel"><i class="icon-screenshot"></i> Objectives*:</label>
-                            <input class="formInput" type="text" name="ldObjective" ng-model="ldObjective"
+                            <input class="formInputMulti" type="text" name="ldObjective" ng-model="ldObjective"
                                    typeahead="suggestion for suggestion in getObjectives($viewValue)"
                                    typeahead-on-select="addObjectiveFromSuggestion()"
                                    ui-keypress="{13:'addObjectiveFromUserInput($event)'}"
                                    placeholder="Objectives..." required ng-maxlength="255"
                                    ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
-                            <span class="clearfix"></span>
+                                <span class="editButton" ng-click="addObjectiveFromUserInput($event)"><i class="icon-plus icon-white"></i> </span>
+                                <span class="clearfix"></span>
 
                             <div id="objectiveTags" class="formTag">
                                 <ul ng-repeat="objective in selectedObjectives" class="zeroMargin objectives">
@@ -210,13 +212,14 @@
 		                            <span id="prereqLengthErr" class="errorTipModal" ng-show="LdCreateForm.ldRequisite.$error.maxlength">A pre-requisite cannot be longer than 255 characters.</span>
 		                        </div>
 		                        <label class="formLabel"><i class="icon-backward"></i> Pre-Requisites:</label>
-		                        <input class="formInput" type="text" name="ldRequisite" ng-model="ldRequisite"
+		                        <input class="formInputMulti" type="text" name="ldRequisite" ng-model="ldRequisite"
 		                        	   typeahead="suggestion for suggestion in getObjectives($viewValue)"
                                        typeahead-on-select="addPrerequisiteFromSuggestion()"
                                        ui-keypress="{13:'addPrerequisiteFromUserInput($event)'}"
 		                               placeholder="Prerequisites..."  ng-maxlength="255"
                                        ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
-		                        <span class="clearfix"></span>
+                                <span class="editButton" ng-click="addPrerequisiteFromUserInput($event)"><i class="icon-plus icon-white"></i> </span>
+                                <span class="clearfix"></span>
 
 		                        <div class="formTag">
 		                            <ul ng-repeat="prerequisite in selectedPrerequisites" class="zeroMargin prerequisites">
