#28 typeahead for scope on ld edit page, also start refactoring typeahead into common service

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -286,6 +286,7 @@
 <script src="/js/auth/AuthController.js"></script>
 <script src="/js/auth/AuthFilter.js"></script>
 <script src="/js/auth/AuthDirective.js"></script>
+<script src="/js/common/TypeaheadService.js"></script>
 <script src="/js/ld/HomeController.js"></script>
 <script src="/js/ld/HomeService.js"></script>
 <script src="/js/ld/LearningDesignController.js"></script>
