#28 wip on ld publication, also try to fix travis timing error with e2e test

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -99,11 +99,18 @@
 
         <div class="clearfix"></div>
         <div class="clear marginTopSidebar">
+            
+            <!-- #28 wip... -->
+            <!-- LD Publication -->
             <h5 class="zeroMargin"><i class="icon-bullhorn"></i> Publication:</h5>
-            <!-- FIXME: dynamic data for publication -->
-
             <div class="onoffswitch">
-                <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
+                <input type="checkbox" 
+                	ng-model="ldPublicationFlag"
+                	ng-checked="(learningdesign.ld_publication == 1)"
+                	ng-change="updateLdPublication()"
+                	name="onoffswitch" 
+                	class="onoffswitch-checkbox" 
+                	id="myonoffswitch">
                 <label class="onoffswitch-label" for="myonoffswitch">
                     <div class="onoffswitch-inner"></div>
                     <div class="onoffswitch-switch"></div>
