#28 replace hard-coded qcers in ld edit page with service result

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -173,14 +173,11 @@
             <div class="titleQcer">
                 <label class="editLabel"><i class="icon-tasks icon-white"></i> QCER Levels:</label>
 
-                <!-- FIXME: How to data bind selected checkboxes in Angular? -->
-                <!-- FIXME: Need service to populate available list of qcers and repeat rather than hard code-->
-                <input type="checkbox" ng-model="selectedQcers[qceropt.id]"> A1
-                <input type="checkbox" ng-model="selectedQcers[qceropt.id]"> A2
-                <input type="checkbox" ng-model="selectedQcers[qceropt.id]"> B1
-                <input type="checkbox" ng-model="selectedQcers[qceropt.id]"> B2
-                <input type="checkbox" ng-model="selectedQcers[qceropt.id]"> C1
-                <input type="checkbox" ng-model="selectedQcers[qceropt.id]"> C2
+                <!-- FIXME: Check off qcers that are already selected in current LD -->
+                <span ng-show="qcerError">{{ qcerError }}</span>
+            	<span ng-repeat="qceropt in qceropts" class="qcerOptData" >
+                	<input type="checkbox" ng-model="selectedQcers[qceropt.id]" name="qcer"> {{ qceropt.name }}
+            	</span>
             </div>
 
             <!-- LD Scope -->
