--- a/client/views/index.html
+++ b/client/views/index.html
@@ -272,8 +272,8 @@
         Licence</a><br>&copy; 2011-2013 <a href="https://github.com/arpetti" target="_blank">Alessandro Arpetti</a> and
         <a href="https://github.com/danielabar" target="_blank">Daniela Baron</a></div>
 </div>
+
 <!-- Vendor Lib -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>  -->
 <script src="/js/lib/underscore-min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-cookies.js"></script>
@@ -285,6 +285,7 @@
 <script src="/js/auth/AuthController.js"></script>
 <script src="/js/auth/AuthFilter.js"></script>
 <script src="/js/auth/AuthDirective.js"></script>
+<script src="/js/common/UnderscoreWrapper.js"></script>
 <script src="/js/common/TypeaheadService.js"></script>
 <script src="/js/ld/HomeController.js"></script>
 <script src="/js/ld/HomeService.js"></script>
