#28 UI preparation for update qcer

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -176,7 +176,7 @@
             	<span ng-repeat="qceropt in qceropts" class="qcerOptData" >
                 	<input type="checkbox" 
                 		ng-model="selectedQcers[qceropt.id]" 
-                		ng-change="updateQcer(qceropt, selectedQcers[qceropt.id])"
+                		ng-change="updateQcer()"
                 		name="qcer"> {{ qceropt.name }}
             	</span>
             </div>
