#28 enhance ld edit e2e to verify scope typeahead and public-private switch

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -217,7 +217,7 @@
             <!-- LD Scope -->
             <div class="titleScope">
                 <form name="ScopeForm" novalidate="" class="singleForm">
-                    <div >
+                    <div id="scopeFormSection">
                         <label class="editLabel"><i class="icon-bell icon-white"></i> Scope:</label>
                         <input class="editInputScocpe" type="text" name="ldScope" 
                         	ng-model="learningDesign.ld_scope"
