--- a/client/views/index.html
+++ b/client/views/index.html
@@ -56,7 +56,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="/"><img src="../img/logo.png" alt="Ledita Logo"/></a>
+            <a id="homeLink" class="brand" href="/"><img src="../img/logo.png" alt="Ledita Logo"/></a>
 
             <div ng-controller="NavActionCtrl" class="nav-collapse collapse">
                 <ul class="nav-top-pad nav">
