#28 e2e test to verify add and remove prereqs

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -273,6 +273,7 @@
         <a href="https://github.com/danielabar" target="_blank">Daniela Baron</a></div>
 </div>
 
+<!-- TODO: Consider hosting angular libs locally so it can work even when offline -->
 <!-- Vendor Lib -->
 <script src="/js/lib/underscore-min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js"></script>
