--- a/client/views/index.html
+++ b/client/views/index.html
@@ -296,6 +296,7 @@
 <script src="/js/ld/LearningDesignEditService.js"></script>
 <script src="/js/ld/LDDirectives.js"></script>
 <script src="/js/ld/ActivityFilter.js"></script>
+<script src="/js/activity/ActivityController.js"></script>
 <script src="/js/user/UserController.js"></script>
 <script src="/js/user/UserService.js"></script>
 
