--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -269,7 +269,8 @@
 	<!-- #43 Drag target must not have any angular bound data inside it -->
 	<!-- #43 wip, id should be unique but having trouble with directive not interpolating id and getting literal instead -->
 	<!--      so for now, it always finds first dropzone, and removes dotted style after drop -->
-	<div id="droplevelid" targetdata="{{level}}-level" class="lvl-target" x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">
+	<!-- #43 wip, each level should further sub-divide into 4 positions, id's should be like L1P1, L1P2, etc... -->
+	<div id="{{$index}}-level" targetdata="{{level}}-level" class="lvl-target" x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">
 		Drop Zone
 	</div>
 	
