#43 divide each level dropzone into 4 for each position, and miraculously now it works in Chrome

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -18,6 +18,12 @@ ACE500 = green
 	opacity: .5;
 }
 
+.dropzone {
+	display: inline-block;
+	margin: 5px;
+	padding: 5px;
+}
+
 [draggable] {
 	cursor: move;
 }
