#43 update draggable id to include node type

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -274,7 +274,7 @@
 	</div>
 	
 	<!-- #43 wip, id should reflect node type, for now, make them all activity -->
-    <div id="{{node.node_id}}-activity" ng-repeat="node in nodes" x-lvl-draggable="true" ng-class="getBoxClass(node)">
+    <div id="{{node.node_id}}-{{node.type}}" ng-repeat="node in nodes" x-lvl-draggable="true" ng-class="getBoxClass(node)">
         
         <!-- If it's a group:  -->
         <div ng-show="node.children" class="groupName">{{ node.node_name }}</div>
