#43 service to parse drag source id

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -298,6 +298,7 @@
 <script src="/js/ld/ActivityFilter.js"></script>
 <script src="/js/activity/lvl-drag-and-drop.js"></script>
 <script src="/js/activity/ActivityController.js"></script>
+<script src="/js/activity/ActivityService.js"></script>
 <script src="/js/user/UserController.js"></script>
 <script src="/js/user/UserService.js"></script>
 
